2012-02-19  Gyuyoung Kim  <gyuyoung.kim@samsung.com>

        [CMAKE] Check gstreamer minimum required version.
        https://bugs.webkit.org/show_bug.cgi?id=79005

        Reviewed by Daniel Bates.

        To enable video, Gstreamer version requires to be above 0.10.30.
        This patch checks whether Gstreamer version is greater than 0.10.30.

        * Source/cmake/FindGStreamer-App.cmake:
        * Source/cmake/FindGStreamer-Base.cmake:
        * Source/cmake/FindGStreamer-Interfaces.cmake:
        * Source/cmake/FindGStreamer-Pbutils.cmake:
        * Source/cmake/FindGStreamer-Plugins-Base.cmake:
        * Source/cmake/FindGStreamer-Video.cmake:
        * Source/cmake/FindGStreamer.cmake:

2012-02-19  Gustavo Noronha Silva  <gns@gnome.org>

        [GTK] Remove unused GSettings stuff
        https://bugs.webkit.org/show_bug.cgi?id=78995

        Reviewed by Martin Robinson.

        * configure.ac: remove gsettings schema file creation.

2012-02-19  Ryosuke Niwa  <rniwa@webkit.org>

        Perf-o-matic should show both WebKit and Chromium revisions
        https://bugs.webkit.org/show_bug.cgi?id=78955

        Reviewed by Andreas Kling.

        Include Chromium revision numbers in runs responses when available.

        * Websites/webkit-perf.appspot.com/js/config.js:
        (urlForChangeset):
        (urlForChangesetList):
        * Websites/webkit-perf.appspot.com/runs_handler.py:
        (RunsHandler.post):

2012-02-18  Kevin Ollivier  <kevino@theolliviers.com>

        [wx] Exclude a couple unused bindings files from the build
        as they do not compile currently.

        * wscript:

2012-02-17  Ryosuke Niwa  <rniwa@webkit.org>

        perf-o-matic needs model unit tests
        https://bugs.webkit.org/show_bug.cgi?id=78885

        Reviewed by Adam Barth.

        Added unit tests for models.py.

        Also renamed modelFromNumericId to model_from_numeric_id and moved set_persitent_cache and get_persistent_cache