@@ -241,14 +241,12 @@ include Tools/GNUmakefile.am
 include Source/WebKit/gtk/po/GNUmakefile.am
 include Tools/DumpRenderTree/gtk/GNUmakefile.ImageDiff.am
 
-if ENABLE_WEBKIT2
 include Source/WebKit2/GNUmakefile.am
 include Source/WebKit2/UIProcess/API/gtk/tests/GNUmakefile.am
 include Tools/MiniBrowser/gtk/GNUmakefile.am
 include Tools/WebKitTestRunner/GNUmakefile.am
 # [GTK] Refactor the translations now that we have webkit2
 # https://bugs.webkit.org/show_bug.cgi?id=55153
-endif
 
 # Autogenerated sources
 BUILT_SOURCES += \
