@@ -1,5 +1,15 @@
 2012-02-20  Martin Robinson  <mrobinson@igalia.com>
 
+        Fix WebKit2GTK+ for 'make distcheck'.
+
+        Instead of conditionally including WebKit2 GNUmakefiles, always
+        include them and conditionally activate the final targets.
+
+        * GNUmakefile.am:
+        * UIProcess/API/gtk/tests/GNUmakefile.am:
+
+2012-02-20  Martin Robinson  <mrobinson@igalia.com>
+
         [GTK][WK2] WebKit2 does not build if gtk-unix-printing-3.0 is not available
         https://bugs.webkit.org/show_bug.cgi?id=79011
 
